Upgrade to JavaGI 0.8.0