@@ -11,13 +11,13 @@ repositories {
 }
 
 kotlin {
-    jvmToolchain(20)
+    jvmToolchain(21)
 }
 
 dependencies {
     api(compose.runtime)
-    api("io.github.jwharm.javagi:gtk:0.7.2")
-    api("io.github.jwharm.javagi:adw:0.7.2")
+    api("io.github.jwharm.javagi:gtk:0.8.0")
+    api("io.github.jwharm.javagi:adw:0.8.0")
 }
 
 tasks.withType<JavaExec>().all {
@@ -31,8 +31,6 @@ tasks.withType<JavaExec>().all {
 tasks.withType<JavaCompile>().all {
     this.options.compilerArgs = listOf(
         "--enable-preview",
-        "--enable-native-access=ALL-UNNAMED",
-        "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu"
     )
 }
 
